# videogen

./: .gitignore  .gitmodules  README.md  pyproject.toml
scripts/: pixelle-api.sh  pixelle-web.sh  server-api.sh  server-comfyui.sh  server-web.sh  setup_comfyui.sh  setup_conda.sh  setup_ollama.sh
videogen/: __init__.py
